--- a/PetProject.csproj
+++ b/PetProject.csproj
@@ -2,9 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Include="C:\Users\Amang\Desktop\шКодить\C#\Class2.cs" Link="Class2.cs" />
+  </ItemGroup>
 
 </Project>
